--- a/etude.html
+++ b/etude.html
@@ -40,7 +40,7 @@
   <button class="but" id="play" onclick="reproducir()">
     <i id="icon" class="fas fa-volume-up"></i>
   </button>
-  
+  <br></br>
   <h1>ETUDE HOUSE</h1>
   <br></br>
   <img class="texta lazy" data-src="lazy.jpg"
@@ -56,7 +56,7 @@
   <br></br>
   <div class="container">
     <div class="row">
-      <div class="card p-0 col me-1 mb-1">
+      <div class="card prueba  col me-1 mb-1">
 
         <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/53/149/M_p0046314953.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 350 MXN</h4>
@@ -101,7 +101,7 @@
         </div>
       </div>
       <!--MODAL END-->
-      <div class="card p-0 col me-1 mb-1">
+      <div class="card prueba  col me-1 mb-1">
 
         <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/91/565/M_p0069856591.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 300 MXN</h4>
@@ -149,7 +149,7 @@
         </div>
       </div>
       <!--MODAL END-->
-      <div class="card p-0 col col me-1 mb-1 ">
+      <div class="card prueba  col col me-1 mb-1 ">
 
         <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/19/078/M_p0037407819.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 150 MXN</h4>
@@ -241,7 +241,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="card p-0 col me-1 mb-1">
+        <div class="card prueba  col me-1 mb-1">
 
           <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/67/080/M_p0037408067.jpg" alt="">
           <h4 class="pt-2 ps-2">$ 350 MXN</h4>
@@ -287,7 +287,7 @@
           </div>
         </div>
         <!--MODAL END-->
-        <div class="card p-0 col me-1 mb-1">
+        <div class="card prueba  col me-1 mb-1">
 
           <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/19/933/M_p0114593319.jpg" alt="">
           <h4 class="pt-2 ps-2">$ 300 MXN</h4>
@@ -334,7 +334,7 @@
           </div>
         </div>
         <!--MODAL END-->
-        <div class="card p-0 col col me-1 mb-1 ">
+        <div class="card prueba  col col me-1 mb-1 ">
 
           <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/39/443/M_p0074444339.jpg" alt="">
           <h4 class="pt-2 ps-2">$ 450 MXN</h4>
@@ -432,7 +432,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="card p-0 col me-1 mb-1">
+          <div class="card prueba  col me-1 mb-1">
 
             <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/42/033/M_p0038403342.jpg" alt="">
             <h4 class="pt-2 ps-2">$ 160 MXN</h4>
@@ -480,7 +480,7 @@
             </div>
           </div>
           <!--MODAL END-->
-          <div class="card p-0 col me-1 mb-1">
+          <div class="card prueba  col me-1 mb-1">
 
             <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/41/075/M_p0037407541.jpg" alt="">
             <h4 class="pt-2 ps-2">$ 200 MXN</h4>
@@ -528,7 +528,7 @@
             </div>
           </div>
           <!--MODAL END-->
-          <div class="card p-0 col col me-1 mb-1 ">
+          <div class="card prueba  col col me-1 mb-1 ">
 
             <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/07/868/M_p0075986807.jpg" alt="">
             <h4 class="pt-2 ps-2">$ 350 MXN</h4>
