--- a/proyectopag4.html
+++ b/proyectopag4.html
@@ -48,12 +48,12 @@
   <div class="container">
     <div class="row">
 
-      <div class="card p-0 col me-1 mb-1">
+      <div class="card prueba  col me-1 mb-1 position-relative">
 
         <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/15/350/M_p0095035015.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 360 MXN</h4>
         <span class="pb-2 ps-2">SOME BY MI- Days miracle cream</span>
-        <button type="button" class="btn btn-primary lugarBoton" data-bs-toggle="modal" data-bs-target="#exampleModal01">
+        <button type="button" class="btn btn-primary lugarBoton " data-bs-toggle="modal" data-bs-target="#exampleModal01">
           VER DETALLES
         </button>
       </div>
@@ -97,12 +97,12 @@
       </div>
       <!---->
 
-      <div class="card p-0 col me-1 mb-1">
+      <div class="card prueba  col me-1 mb-1 position-relative pb-5">
 
         <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/07/101/M_p0118410107.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 309 MXN</h4>
-        <span class="pb-2 ps-2 ">C0SRX- Crema con porpóleo</span>
-        <button type="button" class="btn btn-primary lugarBoton" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+        <span class="pb-2 ps-2  ">C0SRX- Crema con porpóleo</span>
+        <button type="button" class="btn btn-primary lugarBoton " data-bs-toggle="modal" data-bs-target="#exampleModal2">
           VER DETALLES
         </button>
       </div>
@@ -146,7 +146,7 @@
       </div>
       <!---->
 
-      <div class="card p-0 col col me-1 mb-1 ">
+      <div class="card prueba  col col me-1 mb-1 ">
 
         <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/53/149/M_p0046314953.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 350 MXN</h4>
@@ -194,7 +194,7 @@
       </div>
       <!---->
 
-      <div class="card p-0 col col me-1 mb-1 ">
+      <div class="card prueba  col col me-1 mb-1 ">
 
         <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/11/813/M_p0056481311.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 370 MXN</h4>
@@ -246,7 +246,7 @@
 
 
     <div class="row">
-      <div class="card p-0 col me-1 mb-1">
+      <div class="card prueba  col me-1 mb-1 position-relative prueba">
 
         <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/27/911/M_p0070291127.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 340 MXN</h4>
@@ -293,7 +293,7 @@
       </div>
       <!---->
 
-      <div class="card p-0 col me-1 mb-1">
+      <div class="card prueba  col me-1 mb-1">
 
         <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/32/091/M_p0057609132.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 400 MXN</h4>
@@ -340,7 +340,7 @@
         </div>
       </div>
       <!---->
-      <div class="card p-0 col col me-1 mb-1 ">
+      <div class="card prueba  col col me-1 mb-1 ">
 
         <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/14/420/M_p0071142014.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 540 MXN</h4>
@@ -438,7 +438,7 @@
 
 
     <div class="row">
-      <div class="card p-0 col me-1 mb-1">
+      <div class="card prueba  col me-1 mb-1">
 
         <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/08/610/M_p0122061008.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 460 MXN</h4>
@@ -485,7 +485,7 @@
       <!---->
 
 
-      <div class="card p-0 col me-1 mb-1">
+      <div class="card prueba  col me-1 mb-1">
 
         <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/62/458/M_p0125245862.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 320 MXN</h4>
@@ -532,7 +532,7 @@
       </div>
       <!---->
 
-      <div class="card p-0 col col me-1 mb-1 ">
+      <div class="card prueba  col col me-1 mb-1 ">
 
         <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/43/827/M_p0126082743.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 263 MXN</h4>
@@ -630,7 +630,7 @@
 
 
     <div class="row">
-      <div class="card p-0 col me-1 mb-1">
+      <div class="card prueba  col me-1 mb-1">
 
         <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/78/192/M_p0144019278.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 96 MXN</h4>
@@ -677,7 +677,7 @@
       </div>
       <!---->
 
-      <div class="card p-0 col me-1 mb-1">
+      <div class="card prueba  col me-1 mb-1">
 
         <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/22/468/M_p0143546822.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 216 MXN</h4>
@@ -725,7 +725,7 @@
       </div>
       <!---->
 
-      <div class="card p-0 col col me-1 mb-1 ">
+      <div class="card prueba  col col me-1 mb-1 ">
 
         <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/01/802/M_p0085180201.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 80 MXN</h4>
@@ -823,7 +823,7 @@
     </div>
 
     <div class="row">
-      <div class="card p-0 col col me-1 mb-1 ">
+      <div class="card prueba  col col me-1 mb-1 ">
 
         <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/70/364/M_p0095536470.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 169 MXN</h4>
@@ -869,7 +869,7 @@
         </div>
       </div>
       <!---->
-      <div class="card p-0 col col me-1 mb-1 ">
+      <div class="card prueba  col col me-1 mb-1 ">
 
         <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/95/910/M_p0070291095.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 199 MXN
@@ -916,7 +916,7 @@
         </div>
       </div>
       <!---->
-      <div class="card p-0 col col me-1 mb-1 ">
+      <div class="card prueba  col col me-1 mb-1 ">
 
         <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/50/212/M_p0147721250.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 200 MXN</h4>
@@ -961,7 +961,7 @@
         </div>
       </div>
       <!---->
-      <div class="card p-0 col col me-1 mb-1 ">
+      <div class="card prueba  col col me-1 mb-1 ">
 
         <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/34/771/M_p0131777134.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 430 MXN</h4>
@@ -1010,7 +1010,7 @@
     </div>
 
     <div class="row">
-      <div class="card p-0 col me-1 mb-1">
+      <div class="card prueba  col me-1 mb-1">
 
         <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/45/244/M_p0096224445.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 768 MXN</h4>
@@ -1056,7 +1056,7 @@
       </div>
       <!---->
 
-      <div class="card p-0 col me-1 mb-1">
+      <div class="card prueba  col me-1 mb-1">
 
         <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/25/671/M_p0134567125.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 250 MXN</h4>
@@ -1103,7 +1103,7 @@
       </div>
       <!---->
 
-      <div class="card p-0 col col me-1 mb-1 ">
+      <div class="card prueba  col col me-1 mb-1 ">
 
         <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/83/256/M_p0141325683.jpg" alt="">
         <h4 class="pt-2 ps-2">$ 225 MXN</h4>
