--- a/proyectopag5.html
+++ b/proyectopag5.html
@@ -43,12 +43,12 @@
         <i id="icon" class="fas fa-volume-up"></i>
       </button>
     <!--Productos-->
-  
+    <br></br>
     <h1>Make Up</h1>
     <br></br>
     <div class="container">
         <div class="row">
-            <div class="card p-0 col me-1 mb-1">
+            <div class="card prueba  col me-1 mb-1">
 
                 <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/94/605/M_p0057760594.jpg" alt="">
                 <h4 class="pt-2 ps-2">$ 225 MXN</h4>
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <!---->
-            <div class="card p-0 col me-1 mb-1">
+            <div class="card prueba  col me-1 mb-1">
 
                 <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/85/622/M_p0075462285.png"
                     alt="">
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <!---->
-            <div class="card p-0 col col me-1 mb-1 ">
+            <div class="card prueba  col col me-1 mb-1 ">
 
                 <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/85/939/M_p0069493985.jpg" alt="">
                 <h4 class="pt-2 ps-2">$ 350 MXN</h4>
@@ -197,7 +197,7 @@
                 </div>
             </div>
             <!---->
-            <div class="card p-0 col col me-1 mb-1 ">
+            <div class="card prueba  col col me-1 mb-1 ">
 
                 <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/00/615/M_p0127961500.jpg" alt="">
                 <h4 class="pt-2 ps-2">$ 330 MXN</h4>
@@ -254,7 +254,7 @@
 
 
         <div class="row">
-            <div class="card p-0 col me-1 mb-1">
+            <div class="card prueba  col me-1 mb-1">
 
                 <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/99/849/M_p0117984999.jpg" alt="">
                 <h4 class="pt-2 ps-2">$ 240 MXN</h4>
@@ -303,7 +303,7 @@
                 </div>
             </div>
             <!---->
-            <div class="card p-0 col me-1 mb-1">
+            <div class="card prueba  col me-1 mb-1">
 
                 <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/73/173/M_p0105417373.jpg"
                     alt="">
@@ -354,7 +354,7 @@
                 </div>
             </div>
             <!---->
-            <div class="card p-0 col col me-1 mb-1 ">
+            <div class="card prueba  col col me-1 mb-1 ">
 
                 <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/79/067/M_p0111606779.jpg" alt="">
                 <h4 class="pt-2 ps-2">$ 640 MXN</h4>
@@ -468,7 +468,7 @@
 
 
         <div class="row">
-            <div class="card p-0 col me-1 mb-1">
+            <div class="card prueba  col me-1 mb-1">
 
                 <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/13/046/M_p0124004613.jpg" alt="">
                 <h4 class="pt-2 ps-2">$ 240 MXN</h4>
@@ -518,7 +518,7 @@
                 </div>
             </div>
             <!---->
-            <div class="card p-0 col me-1 mb-1">
+            <div class="card prueba  col me-1 mb-1">
 
                 <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/30/687/M_p0107168730.png"
                     alt="">
@@ -570,7 +570,7 @@
                 </div>
             </div>
             <!---->
-            <div class="card p-0 col col me-1 mb-1 ">
+            <div class="card prueba  col col me-1 mb-1 ">
 
                 <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/95/103/M_p0072710395.jpg" alt="">
                 <h4 class="pt-2 ps-2">$ 540 MXN</h4>
@@ -677,7 +677,7 @@
 
 
         <div class="row">
-            <div class="card p-0 col me-1 mb-1">
+            <div class="card prueba  col me-1 mb-1">
 
                 <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/08/895/M_p0143489508.jpg" alt="">
                 <h4 class="pt-2 ps-2">$ 240 MXN</h4>
@@ -726,7 +726,7 @@
                 </div>
             </div>
             <!---->
-            <div class="card p-0 col me-1 mb-1">
+            <div class="card prueba  col me-1 mb-1">
 
                 <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/01/705/M_p0117370501.jpg"
                     alt="">
@@ -778,7 +778,7 @@
                 </div>
             </div>
             <!---->
-            <div class="card p-0 col col me-1 mb-1 ">
+            <div class="card prueba  col col me-1 mb-1 ">
 
                 <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/03/782/M_p0130878203.jpg" alt="">
                 <h4 class="pt-2 ps-2">$ 240 MXN</h4>
@@ -882,7 +882,7 @@
 
 
         <div class="row">
-            <div class="card p-0 col me-1 mb-1">
+            <div class="card prueba  col me-1 mb-1">
 
                 <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/24/142/M_p0114214224.jpg" alt="">
                 <h4 class="pt-2 ps-2">$ 450 MXN</h4>
@@ -932,7 +932,7 @@
                 </div>
             </div>
             <!---->
-            <div class="card p-0 col me-1 mb-1">
+            <div class="card prueba  col me-1 mb-1">
 
                 <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/62/554/M_p0078055462.jpg"
                     alt="">
@@ -985,7 +985,7 @@
                 </div>
             </div>
             <!---->
-            <div class="card p-0 col col me-1 mb-1 ">
+            <div class="card prueba  col col me-1 mb-1 ">
 
                 <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/38/459/M_p0087345938.jpg" alt="">
                 <h4 class="pt-2 ps-2">$ 489 MXN</h4>
