--- a/proyepag3.html
+++ b/proyepag3.html
@@ -48,9 +48,10 @@
 
     <br></br>
     <h1 class="titulo">Hair & Body</h1>
+  <br></br>
     <div class="container">
       <div class="row">
-        <div class="card p-0 col me-1 mb-1">
+        <div class="card prueba  col me-1 mb-1">
 
           <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/84/869/M_p0017986984.jpg" alt="">
           <h4 class="pt-2 ps-2">$ 160 MXN</h4>
@@ -96,7 +97,7 @@
           </div>
         </div>
         <!---->
-        <div class="card p-0 col me-1 mb-1">
+        <div class="card prueba  col me-1 mb-1">
 
           <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/95/022/M_p0110802295.jpg" alt="">
           <h4 class="pt-2 ps-2">$ 300 MXN</h4>
@@ -142,7 +143,7 @@
           </div>
         </div>
         <!---->
-        <div class="card p-0 col col me-1 mb-1 ">
+        <div class="card prueba  col col me-1 mb-1 ">
 
           <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/08/933/M_p0129493308.jpg" alt="">
           <h4 class="pt-2 ps-2">$ 550 MXN</h4>
@@ -188,7 +189,7 @@
           </div>
         </div>
         <!---->
-        <div class="card p-0 col col me-1 mb-1 ">
+        <div class="card prueba  col col me-1 mb-1 ">
 
           <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/28/391/M_p0112839128.jpg" alt="">
           <h4 class="pt-2 ps-2">$ 380 MXN</h4>
@@ -236,7 +237,7 @@
         <!---->
       </div>
       <div class="row">
-        <div class="card p-0 col me-1 mb-1">
+        <div class="card prueba  col me-1 mb-1">
 
           <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/76/805/M_p0117480576.jpg" alt="">
           <h4 class="pt-2 ps-2">$ 240 MXN</h4>
@@ -282,7 +283,7 @@
           </div>
         </div>
         <!---->
-        <div class="card p-0 col me-1 mb-1">
+        <div class="card prueba  col me-1 mb-1">
 
           <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/37/867/M_p0098386737.jpg" alt="">
           <h4 class="pt-2 ps-2">$ 400 MXN</h4>
@@ -329,7 +330,7 @@
           </div>
         </div>
         <!---->
-        <div class="card p-0 col col me-1 mb-1 ">
+        <div class="card prueba  col col me-1 mb-1 ">
 
           <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/74/440/M_p0102144074.jpg" alt="">
           <h4 class="pt-2 ps-2">$ 540 MXN</h4>
@@ -427,7 +428,7 @@
       </div>
 
       <div class="row">
-        <div class="card p-0 col me-1 mb-1">
+        <div class="card prueba  col me-1 mb-1">
 
           <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/08/702/M_p0131070208.jpg" alt="">
           <h4 class="pt-2 ps-2">$ 250 MXN</h4>
@@ -474,7 +475,7 @@
           </div>
         </div>
         <!---->
-        <div class="card p-0 col me-1 mb-1">
+        <div class="card prueba  col me-1 mb-1">
 
           <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/18/852/M_p0053685218.jpg" alt="">
           <h4 class="pt-2 ps-2">$ 160 MXN</h4>
@@ -519,7 +520,7 @@
           </div>
         </div>
         <!---->
-        <div class="card p-0 col col me-1 mb-1 ">
+        <div class="card prueba  col col me-1 mb-1 ">
 
           <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/37/535/M_p0059953537.jpg" alt="">
           <h4 class="pt-2 ps-2">$ 89 MXN</h4>
@@ -613,7 +614,7 @@
       </div>
 
       <div class="row">
-        <div class="card p-0 col me-1 mb-1">
+        <div class="card prueba  col me-1 mb-1">
 
           <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/67/080/M_p0037408067.jpg" alt="">
           <h4 class="pt-2 ps-2">$ 640 MXN</h4>
@@ -660,7 +661,7 @@
           </div>
         </div>
         <!---->
-        <div class="card p-0 col me-1 mb-1">
+        <div class="card prueba  col me-1 mb-1">
 
           <img onclick="prueba()" src="https://d1flfk77wl2xk4.cloudfront.net/Assets/93/136/M_p0099713693.jpg" alt="">
           <h4 class="pt-2 ps-2">$ 234 MXN</h4>
@@ -705,7 +706,7 @@
           </div>
         </div>
         <!---->
-        <div class="card p-0 col col me-1 mb-1 ">
+        <div class="card prueba  col col me-1 mb-1 ">
 
           <img src="https://d1flfk77wl2xk4.cloudfront.net/Assets/09/775/M_p0065977509.jpg" alt="">
           <h4 class="pt-2 ps-2">$ 120 MXN</h4>
